--- a/imapfiles.cfg
+++ b/imapfiles.cfg
@@ -1,8 +1,8 @@
 [general]
-destination=./files
+destination=/Users/Dan/Downloads/images
 [imap]
-server=localhost
-username=username
-password=password
+server=imap.gmail.com	
+username=demo1@sloane-squared.com
+password=ssqOMED1811
 folder=INBOX
 archive=archive
