Removed secret stuff.  Now changing the password!

--- a/imapfiles.cfg
+++ b/imapfiles.cfg
@@ -2,7 +2,7 @@
 destination=/Users/Dan/Downloads/images
 [imap]
 server=imap.gmail.com	
-username=demo1@sloane-squared.com
-password=ssqOMED1811
+username=xxx
+password=xxx
 folder=INBOX
 archive=archive
